--- a/Steckbrief/Steckbrief.css
+++ b/Steckbrief/Steckbrief.css
@@ -1,20 +1,11 @@
 body{
     font-family: 'Courier New', Courier, monospace; 
-    background-color: rgb(214, 178, 168); 
+    background-color: rgba(221, 208, 204, 0.925); 
 
 }
 
 
-nav{
-    background-color: #fae5e5c7; 
-    position: fixed; 
-    top: 0px; 
-    left: 0px; 
-    height: 80px; 
-    width: 100%; 
-    text-align: center; 
-    z-index: 3;
-}
+
 
 h2{
     position: relative;
