--- a/Steckbrief/steckbrief.css
+++ b/Steckbrief/steckbrief.css
@@ -9,10 +9,11 @@ body{
 
 h2{
     position: relative;
-    left: 40px; 
+    top: -80px; 
+    left: -390px;
     color: white;
     font-family: 'Times New Roman', Times, serif; 
-    font-weight: 100;
+    font-weight: 150;
 
     
 }
