--- a/Steckbrief/steckbrief.css
+++ b/Steckbrief/steckbrief.css
@@ -11,7 +11,7 @@ h2{
     position: relative;
     top: -60px; 
     left: -25px;
-    color: white;
+    color:  rgba(221, 208, 204, 0.925);
     font-family: 'Times New Roman', Times, serif; 
     font-weight: 400;
     
