--- a/Steckbrief/steckbrief.css
+++ b/Steckbrief/steckbrief.css
@@ -9,9 +9,9 @@ body{
 
 h2{
     position: relative;
-    top: -60px; 
+    top: -70px; 
     left: -25px;
-    color:  rgba(221, 208, 204, 0.925);
+    color: white;
     font-family: 'Times New Roman', Times, serif; 
     font-weight: 400;
     
