--- a/Steckbrief/steckbrief.css
+++ b/Steckbrief/steckbrief.css
@@ -1,51 +1,23 @@
-body{
-    font-family: 'Courier New', Courier, monospace; 
-    background-color: rgba(221, 208, 204, 0.925); 
 
+body {
+    font-family: arial;
+    font-size: small;
+    color: rgb(56, 56, 56); 
+    background-color: rgba(235, 227, 227, 0.349);
+    text-align: center;
 }
 
 
-
-
-h2{
-    position: relative;
-    top: -70px; 
-    left: -25px;
-    color: white;
-    font-family: 'Times New Roman', Times, serif; 
-    font-weight: 400;
-    
-}
-.aufgaben{
-    position: relative;
-    top: -35px;
+h1 {
+    text-align: center;
 }
 
-
-.mainDiv{
-
-    background-color: white; 
-    margin-left: auto; 
-    margin-right: auto; 
-    position: relative;
-    top: 90px; 
-    left: 50px; 
-    width: 460px;
-    height: 500px;
-    padding: 5px 25px 5px 25px; 
-}
-
-.text{
-    position: relative;
-    margin-left: auto; 
-    margin-right: auto; 
-    top: 40px;
-
+h5 {
+    font-weight: lighter; 
 }
 
 img{
     position: relative;
     margin-left: auto; 
     margin-right: auto; 
-    left: 180px; 
 }
