--- a/Steckbrief/steckbrief.css
+++ b/Steckbrief/steckbrief.css
@@ -3,7 +3,7 @@ body {
     font-family: arial;
     font-size: small;
     color: rgb(56, 56, 56); 
-    background-color: rgba(235, 227, 227, 0.349);
+    background-color:white;
     text-align: center;
 }
 
