--- a/Sequenzememory/stylesheet.css
+++ b/Sequenzememory/stylesheet.css
@@ -37,3 +37,26 @@ h5 {
 #randomWord:hover{
     color: rgb(203, 223, 184); 
 }
+
+
+#mainGame{
+
+    top: 70px; 
+    width: 610px;
+    height: 230px;
+    border: small; 
+    background-color: rgba(165, 42, 42, 0.39); 
+    position: relative; 
+    margin-left: auto; 
+    margin-right: auto; 
+}
+
+
+#startGame{
+
+    width: 210px;
+    height: 35px;
+    position: relative;
+    background-color: rgb(185, 66, 66); 
+    
+}
