--- a/Sequenzememory/stylesheet.css
+++ b/Sequenzememory/stylesheet.css
@@ -74,3 +74,13 @@ h5 {
     width: 115px;
     height: 25px;
 }
+
+#mainWord{
+    width: 210px;
+    height: 35px;
+    position: relative;
+    margin-left: auto; 
+    margin-right: auto; 
+    top: 15px; 
+    background-color: rgba(185, 66, 66, 0.418); 
+}
