--- a/Sequenzememory/stylesheet.css
+++ b/Sequenzememory/stylesheet.css
@@ -76,11 +76,15 @@ h5 {
 }
 
 #mainWord{
+    font-family: arial;
+    font-size: 20px;
+    font-weight: lighter; 
     width: 210px;
     height: 35px;
     position: relative;
     margin-left: auto; 
     margin-right: auto; 
     top: 15px; 
+    text-align: center; 
     background-color: rgba(185, 66, 66, 0.418); 
 }
