--- a/Sequenzememory/stylesheet.css
+++ b/Sequenzememory/stylesheet.css
@@ -88,3 +88,20 @@ h5 {
     text-align: center; 
     background-color: rgba(185, 66, 66, 0.418); 
 }
+
+span#openCharacters{
+
+    margin: 10px; 
+    background-color: white; 
+    padding: 10px;
+    border:small; 
+    font-size: 50px; 
+    text-align: center;   
+    cursor: pointer;
+    float: left;
+}
+
+.hiddenCharacters{
+
+    background: black; 
+}
