--- a/Haushaltshilfe-Update/haushaltshilfe.css
+++ b/Haushaltshilfe-Update/haushaltshilfe.css
@@ -1,18 +1,51 @@
 body {
     font-family: arial;
     font-size: small;
-    color: rgb(56, 56, 56); 
+    color: black; 
     background-color:white;
     text-align: center;
+    background-image: url("Bilder/Blatt-Foto.jpg" );
+   
+}
+
+h1 {
+    color: rgb(46, 46, 46); 
+}
+
+
+input[type=checkbox]
+{
+    height: 25px;
+    width: 25px;
+    position: relative; 
+    top: 6px; 
+    left: 3px; 
 }
 
 #bestellung {
-
     border: solid  black 0.4px; 
     margin-left: auto; 
-    margin-right: auto; 
+    margin-right: auto;
+    height: 308px;
+    width: 650px;
+    position: relative;
+    top: -50px; 
+}
+#einkauf, #haushalt {
+    font-size: 16px; 
+    cursor: pointer;
+}
+
+#main {
+    position: relative;
     height: 308px;
     width: 850px;
+    font-size: 15px; 
+    margin-left: auto; 
+    margin-right: auto; 
+    top: 40px; 
+     
+
 }
 
 #diveinkauf, #divhaushalt {
@@ -23,4 +56,26 @@ body {
 #amountarticle {
 
     width: 50px;
+}
+#gesamtP {
+    font-size: 20px; 
+}
+button{
+
+    background: #4c7542; 
+    color: #e6b929;  
+    border: none;
+   
+    padding: 0.001em 10px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    transition-duration: 0.4s;
+    cursor: pointer;
+}
+
+button:hover {
+    background: whitesmoke; 
+    color: rgb(71, 105, 73); 
 }
